<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/login_color">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <ImageView android:src="@drawable/epic_transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_gravity="center_horizontal" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email_input"
                android:textColor="@color/login_button"
                android:hint="@string/fui_email_hint"
                android:inputType="textEmailAddress"
                style="@android:style/TextAppearance.DeviceDefault.Medium"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password_input"
                android:textColor="@color/login_button"
                android:hint="@string/fui_password_hint"
                android:inputType="textPassword"
                style="@android:style/TextAppearance.DeviceDefault.Medium"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:padding="@dimen/activity_horizontal_margin"
            android:textColor="@color/white"
            android:id="@+id/login_button"
            android:backgroundTint="@color/login_button"
            android:text="@string/login"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:padding="@dimen/activity_horizontal_margin"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:id="@+id/signup"
            android:text="@string/signup"
            android:textColor="@color/login_button"
            android:gravity="center" />

        <ImageView android:src="@drawable/google_64dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/google_signin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:padding="@dimen/activity_horizontal_margin"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:text="@string/google_sign"
            android:textColor="@color/login_button"
            android:gravity="center" />

        <TextView
        android:id="@+id/privacy_policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:padding="@dimen/activity_horizontal_margin"
        style="@android:style/TextAppearance.DeviceDefault.Small"
        android:text="@string/fui_privacy_policy"
        android:gravity="center" />

        <TextView
            android:id="@+id/terms_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fui_terms_of_service"
            style="@android:style/TextAppearance.DeviceDefault.Small"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:gravity="center" />

    </LinearLayout>
</ScrollView>